# OOP-Course-Project

./: CMakeLists.txt  README.md  ShadowSpy.cpp
gameHelper/: gameHelper.h
gameHelper/objects/Enemy/: Enemy.cpp  Enemy.h
gameHelper/objects/Hero/ClassicHero/: Hero.cpp  Hero.h
gameHelper/objects/Hero/DamageHero/: DamageHero.cpp  DamageHero.h
gameHelper/objects/Hero/MagicHero/: MagicHero.cpp  MagicHero.h
gameHelper/objects/Person/: APerson.cpp  APerson.h
gameHelper/objects/Ray/: Ray.cpp  Ray.h
gameHelper/objects/SecretBox/: SecretBox.cpp  SecretBox.h
gameHelper/objects/Wall/: Wall.cpp  Wall.h
glutHelper/: glutHelper.h
glutHelper/figures/: Color.h  Fill.h  IDraw.h  IMove.h
glutHelper/figures/circle/: Circle.cpp  Circle.h
glutHelper/figures/line/: Line.cpp  Line.h
glutHelper/figures/oval/: Oval.cpp  Oval.h
glutHelper/figures/pixel/: Pixel.cpp  Pixel.h
